# cpp-chat-system

./: .gitignore  CMakeLists.txt  README.md  TODO.md  chat-client.cpp  chat-server.cpp  client-main.cpp  server-main.cpp
chat-client/: Client.cpp  Client.hpp  Io.cpp  Io.hpp  User.cpp  User.hpp  main.cpp
chat-server/: Server.hpp  main.cpp
frontend/: main.cpp  networkclient.h  resources.qrc
frontend/models/: messagemodel.cpp  messagemodel.h
frontend/qml/: ChatBubble.qml  InputField.qml  Main.qml  MessageList.qml
